# ngtaiwan2019-bazel

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json
src/: BUILD.bazel  index.html  tsconfig.json
src/app/: BUILD.bazel  birthday_card.ts
src/e2e/: BUILD.bazel  app.spec.ts  protractor.on-prepare.js
src/lib/: BUILD.bazel  date.ts  index.ts  user.ts
src/lib/test/: BUILD.bazel  date.spec.ts
