load("@build_bazel_rules_nodejs//:defs.bzl", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_devserver")
load("@npm_bazel_terser//:index.bzl", "terser_minified")

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

rollup_bundle(
    name = "app_bundle",
    enable_code_splitting = False,
    entry_point = "//src/app:birthday_card.ts",
    deps = ["//src/app"],
)

terser_minified(
    name = "app_bundle_min",
    src = ":app_bundle.es2015.js",
)

ts_devserver(
    name = "devserver",
    index_html = "index.html",
    port = 4200,
    visibility = ["//src:__subpackages__"],
    deps = [
        ":app_bundle.es2015.js",
    ],
)
