load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "date",
    srcs = [":date.ts"],
)

ts_library(
    name = "user",
    srcs = [":user.ts"],
    deps = [":date"],
)

ts_library(
    name = "lib",
    srcs = [":index.ts"],
    visibility = ["//visibility:public"],
    deps = [
        ":date",
        ":user",
    ],
)
